angular/src/app/profile/profile.component.css
*{
  margin: 0%;
  padding: 0%;
  font-family: 'Courier New', Courier, monospace;
}
body{
  background: #efefef;
}
nav{
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: #3f3f3f;
  padding: 5px 2%;
  position: sticky;
  top:0;
  z-index: 100;
}
.logo{
  width: 130px;
  height: 60px;
}
.nav-left{
  display: flex;
  align-items: center;
}
.nav-mid{
  display: inline;
  align-items: center;
}
.search{
  background: white;
  width: 350px;
  border-radius: 30px;
  display: flex;
  align-items: center;
  padding:0 15px;
}
.search input{
  width: 100%;
  background: transparent;
  padding: 10px;
  outline: none;
  border: 0;
}
.btn
{
  background-color: transparent; 
  filter: brightness(50%);
}
.nav-right{
  display: flex;
  align-items: center;
}
.nav-right ul li {
  list-style: none;
  display: inline-block;
}
.nav-right ul li img{
  width: 28px;
  margin: 0 15px;
}
.mssg{
  filter: brightness(5);
}
.mssg:hover{
  filter: invert(63%) sepia(62%) saturate(517%) hue-rotate(4deg) brightness(200%) contrast(83%);   
}
.notif{
  filter: brightness(5);
}
.notif:hover{
  filter: invert(63%) sepia(62%) saturate(517%) hue-rotate(4deg) brightness(200%) contrast(83%);   
}
.user{
  filter: brightness(5);
}
.user:hover{
  filter: invert(63%) sepia(62%) saturate(517%) hue-rotate(4deg) brightness(200%) contrast(83%);   
}

.container{
    display: flex;
    justify-content: space-between;
    padding: 13px 5%;
    background-color: #efefef;
}

.mainPicture{
  margin: 5%;
  max-height: 48%;
  max-width: 12%;
  border-radius: 50%;
}
.button-upper {
  position: absolute;
  top: 0;
  right: 0;
  width: 12%;
  height: 8%;
  border-radius: 8%;
  margin-right: 2%;
  margin-top: 1.5%;
}
.adjust-info{
  display: flex;
  justify-content: space-between;
  font-family: cursive;
}

.aligning-mat{
  display: flex;
  margin-top: 2%;
}
.bio-info{
  display: flex;
  justify-content: unset;
  font-family: cursive;
  margin-top:2px;
}

.biography-post{
  width: 90%;
  height: 180px;
  display: block;
  max-width: 90%;
  margin-left: 2%;
  margin-right: 2%;
  padding: 2%;
  top: 2%;
  position: inherit;
}

.button-bio{
  border-radius: -28%;
  margin-left: 7%;
  width: 8%;
  height: 11%;
}

.card-container-top{
  height: auto;
  width: 100%;
  margin: 0% 0% 10%;
  text-align: center;
}

.card-container-middle{
  margin: 0% 0% 10%;
  height: 100%;
  width: 100%;
  text-align: center;
}

.card-container-low{
  margin: 0% 0% 10%;
  height: 100%;
  width: 100%;
  text-align: center;
}
/*extend the comments to full width*/
.comments{
  width: 100%;
}

/*.mat-grid-tile{*/
/*  border-color: black;*/
/*  border-style: solid;*/
/*}*/


.posting{
  width: 65.7%;
  height: auto;
  margin-top: 0%;
  margin-left: 23.2%;
}

.mat-card-image:first-child {
  border-radius: 50%;
  margin-top: 10px;
  border: white;
  border-style: solid;
}

textarea.mat-input-element{
  font-family: emoji;
  padding: 5px 5px;
  margin: -2px 0;
  height: 100px;
  width: 100%;
  font-size: 15px;
  border-style: inherit ;
}

.poster{
  margin: 0% 0% 1%;
  height: 10%;
  width: 7%;
}


.upper-left{
  background-size: cover;
  position: absolute;
  height: inherit;
  width: inherit;
}
.scrollable {
  overflow-y: auto;
  box-sizing: border-box;
  position: absolute;
  height: 160px;
  padding: inherit;
}

.mat-input-element:disabled {
  color: black;
}
.mat-grid-tile-content{
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 25%;
    padding: 0;
    margin: 0;
}
.top-bio-section {
  width: 80%;
  margin-left: 6%;
}

